2004-12-18  Murray Cumming  <murrayc@murrayc.com>

	* libxml++/parsers/saxparser.cc: parse_memory(), parse_chunk(), 
	domparser.cc: parse_memory, parse_chunk(): Use Glib::ustring::bytes() 
	to get the size of the array, not size() or length(), which gets 
	the number of utf8 characters. It might not even be utf8.
	* examples/sax_parser_build_dom/svgparser.cc: Use !empty() instead of 
	size() > 0. It is more efficient.
	
2004-11-30  Murray Cumming  <murrayc@murrayc.com>

	* libxml++/validator.h: Removed an extra ; that g++ 3.4 complains 
	about.

2.8.0:

2004-09-12  Murray Cumming  <murrayc@murrayc.com>

	* libxml++/libxml++.h: Add include for xmlreader.h.
	* examples/saxparser/myparser.cc, saxparser_entities/myparser.cc:
	Correct (and uncomment) the code to read the attribute values.

2.7.1:

2004-09-06  Christophe de Vienne <cdevienne@netcourrier.com>

	* configure.in: Prepared release 2.7.1.
	
2004-08-13  Christophe de Vienne <cdevienne@netcourrier.com>

	* libxml++/parsers/domparser.cc, libxml++/parsers/parser.cc: Fixed
	bug #150082.

2.7.0:

2004-06-24  Murray Cumming  <murrayc@.com>

	* configure.in, Makefile.am, libxml++-2.*.pc.in: Reverted the changes
	that made it install a 2.8 pc.in file, and which decreased the .so
	name. 2.8 is not parallel-installable with 2.6, and this would only 
	have been a half-done transition if it was.

2004-06-22  Murray Cumming  <murrayc@murrayc.com>

	* libxml++/io/outputbuffer.cc, inputbuffer.cc: 
	Added include of libxml/globals.h before include of libxml/xmlIO.h, 
	because xmlIO.h needs the definition of 
	xmlParserInputBufferCreateFilenameFunc.

2004-05-28  Christophe de Vienne <cdevienne@netcourrier>

	* configure.in, examples/Makefile.am, examples/dtdvalidation/Makefile.am,
	examples/dtdvalidation/example.dtd, examples/dtdvalidation/main.cc,
	libxml++/Makefile.am, libxml++/dtd.[h|cc], libxml++/io/Makefile.am,
	libxml++/io/istreamparserinputbuffer.[h|cc],
	libxml++/io/parserinputbuffer.[h|cc],